# atmunge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env-example  go.mod  go.sum  notes.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: cmd.instructions.md  go.instructions.md  pkg.instructions.md  sql.instructions.md
.github/prompts/: create-go-command.prompt.md
.github/snippets/: go-cmd-structure.md
ai/bento/: Makefile  README.md  pyproject.toml
ai/bento/gemma3-27b-it/: example.py  service.py
ai/bento/llamaguard4/: service.py  test.sh
ai/bento/moderation/: requirements.txt  service.py
ai/bento/promptguard2/: requirements.txt  service.py  test.sh
ai/bento/safety-3x/: service.py
ai/bento/safety-mesh/: service.py  test.sh
ai/bento/safety-mesh-1/: requirements.txt  service.py  types.py
ai/bento/shieldgemma/: service.py
ai/bento/shieldgemma2/: service.py
ai/devops/: boot.sh
ai/hack/: gemma-2-9b.py  shieldgemma2.py
cmd/at-mirror/: config.go  logging.go  main.go
cmd/atmunge/: main.go
docs/: sources.md
dsci/: embed.go  git-stats.sh
dsci/plc/: Makefile  pyproject.toml
hack/: car.go  main.go
hack/cmd/: hack.go  inspect.go  ls.go  mst.go  root.go  sync.go  unpack.go  utils.go
pkg/acct/: acct.go  analyze.go  expand.go  feed.go  index.go  query.go  sql.go  stats.go  sync.go
pkg/ai/: ai.go  chat.go  complete.go  embed.go  explain.go  hack.go  input.go  reply.go  safety.go  summarize.go  topics.go
pkg/config/: config.go  logging.go
pkg/db/: client.go  (+4 more)
scripts/: dir-tree.sh
(+177 files in other folders)
