[project]
name = "atmunge"
version = "0.1.0"
description = "ATProtocol mirroring utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "asyncio>=4.0.0",
    "bentoml>=1.4.22",
    "fastapi[standard]>=0.116.1",
    "fbgemm-gpu>=1.3.0",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]

[tool.uv.workspace]
members = ["dsci/*"]
# exclude = ["packages/seeds"]